fix: add foregroundServiceType='mediaProjection' to MediaProjectionFgService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
 
         <!-- خدمة الـForeground لالتقاط الشاشة -->
         <service
+        <service
             android:name=".MediaProjectionFgService"
+            android:exported="false"
+            android:foregroundServiceType="mediaProjection" />
             android:exported="false" />
 
         <!-- الأنشطة -->
